@@ -11,6 +11,7 @@ version of txJSON-RPC).
 the source build.
 * Fixed the virtual-env build make target.
 * Fixed up the dist util module to account for the renamed README.
+* Fixed the json import for modern versions of Python.
 
 2009.11.09
 
